# aoc-24

./: .gitignore  Cargo.toml
benches/: bench01.rs  bench02.rs  bench03.rs  bench04.rs  bench05.rs  bench06.rs  bench07.rs  bench08.rs  bench09.rs  bench10.rs  bench11.rs  bench12.rs  bench13.rs  bench14.rs  bench15.rs  bench16.rs  bench17.rs  bench18.rs  bench19.rs  bench20.rs  bench21.rs  bench22.rs  bench23.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  dayNN.rs  lib.rs
