[package]
name = "aoc-24"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
anyhow = "1.0.93"
nom = "7.1"

# Additional recommended dependencies
itertools = "0.13.0"
regex = "1.11.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench01"
harness = false

[[bench]]
name = "bench02"
harness = false