[package]
name = "aoc-24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
nom = "7.1"

# Additional recommended dependencies
ahash = "0.8"
grid = "0.15"
itertools = "0.13"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench01"
harness = false

[[bench]]
name = "bench02"
harness = false

[[bench]]
name = "bench03"
harness = false

[[bench]]
name = "bench04"
harness = false

[[bench]]
name = "bench05"
harness = false

[[bench]]
name = "bench06"
harness = false

[[bench]]
name = "bench07"
harness = false

[[bench]]
name = "bench08"
harness = false